# jasm

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build.sh  build.zig  build.zig.zon  flake.nix  nob.c  nob.h  project.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: doc-deploy.yml
doc/: code_style.md  index.html
editor-support/nano/: jasm.nanorc
editor-support/vscode/: README.md  package-lock.json  package.json
editor-support/vscode/snippets/: jasm.json
editor-support/vscode/syntaxes/: jasm.tmLanguage.json
examples/: echo.jasm  fib_file.jasm  file_reading.jasm  hello-world.jasm  hello_file.jasm  hello_world.jasm  loop.jasm  test.asm  test.jasm
jasm-support/: language-configuration.json  package.json
jasm-support/syntaxes/: jasm.tmLanguage.json
lib/: assembler.h  binary_writer.h  cli.h  color_utils.h  error.h  syntax.h
src/: ansi_codes.c3  ansi_styles.zig  argparser.c3  assembler.c  buffer_utils.c  cli.c  cli_parser.zig  color.c3  color_utils.c  color_utils.h  config.c3  elf_writer.c  error.c  lexer.c3  logger.c3  main.c  main.c3  main.zig  raw_writer.c  syntax.c
src/cli/: argparser.c3  cli.c3
src/cli/commands/: help.zig  license.zig
src/config/: config.zig
src/logger/: logger.c3
src/utils/: ansi_codes.c3  config.c3  logger.c3
tools/: format_code.sh
web/: index.html
